added domain as env variable

--- a/views/shortened.ejs
+++ b/views/shortened.ejs
@@ -8,7 +8,7 @@
         <div class="alert alert-success">
             <h1 class="h5 mb-3">Your URL has successfully been shortened.</h1>
             <div class="d-flex">
-                <input type="text" class="form-control me-1" value="localhost:3000/<%= urlDoc.shortened %>" disabled>
+                <input type="text" class="form-control me-1" value="<%= domain %>/<%= urlDoc.shortened %>/<%= urlDoc.shortened %>" disabled>
                 <button class="btn btn-dark me-1" id="copy-btn">Copy</button>
                 <a class="btn btn-dark me-1" href="<%= urlDoc.url %>">Goto</a>
                 <a class="btn btn-dark" href="/">Back</a>
@@ -17,7 +17,7 @@
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
         <script>
-            const copyUrl = 'localhost:3000/<%= urlDoc.shortened %>';
+            const copyUrl = '<%= domain %>/<%= urlDoc.shortened %>';
         </script>
         <script src="/js/shortened.js"></script>
     </body>
