--- a/views/shortened.ejs
+++ b/views/shortened.ejs
@@ -8,7 +8,7 @@
         <div class="alert alert-success">
             <h1 class="h5 mb-3">Your URL has successfully been shortened.</h1>
             <div class="d-flex">
-                <input type="text" class="form-control me-1" value="<%= domain %>/<%= urlDoc.shortened %>/<%= urlDoc.shortened %>" disabled>
+                <input type="text" class="form-control me-1" value="<%= domain %>/<%= urlDoc.shortened %>" disabled>
                 <button class="btn btn-dark me-1" id="copy-btn">Copy</button>
                 <a class="btn btn-dark me-1" href="<%= urlDoc.url %>">Goto</a>
                 <a class="btn btn-dark" href="/">Back</a>
