--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,14 +6,15 @@
         <link rel="stylesheet" href="/css/index.css">
     </head>
     <body class="d-flex vh-100 flex-column justify-content-center align-items-center">
-        <form action="/" method="POST" class="card border-0 p-3 p-sm-5" id="main-form">
+        <form action="/" method="POST" class="needs-validation card border-0 p-3 p-sm-5" id="main-form" novalidate>
             <h1 class="mb-4">URL Shortener</h1>
             <div class="d-flex flex-column flex-sm-row">
-                <input type="text" class="form-control me-sm-1 mb-1 mb-sm-0" placeholder="Enter your URL" name="url">
+                <input type="text" class="form-control me-sm-1 mb-1 mb-sm-0" placeholder="Enter your URL" name="url" required>
                 <button class="btn btn-primary">Shorten</button>
             </div>
         </form>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
+        <script src="/js/bootstrapValidation.js"></script>
     </body>
 </html>
