--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,7 @@
         <title>URL Shortener</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
         <link rel="stylesheet" href="/css/index.css">
+        <%- include('partials/analytics.ejs') %>
     </head>
     <body class="d-flex vh-100 flex-column justify-content-center align-items-center">
         <form action="/" method="POST" class="needs-validation card border-0 p-3 p-sm-5" id="main-form" novalidate>
