--- a/views/shortened.ejs
+++ b/views/shortened.ejs
@@ -3,6 +3,7 @@
     <head>
         <title>URL Shortener</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+        <%- include('partials/analytics.ejs') %>
     </head>
     <body class="d-flex vh-100 flex-column justify-content-center align-items-center">
         <div class="alert alert-success">
